--- a/deploy/terraform/modules/output_files/ansible_inventory.yml.tmpl
+++ b/deploy/terraform/modules/output_files/ansible_inventory.yml.tmpl
@@ -75,15 +75,7 @@ all:
           ansible_user:       "${application.authentication.username}"
 %{~ endfor }
 
-    web:
-      hosts:
-%{~ for ip-web in ips-web }
-        ${ip-web}:
-          ansible_connection: "ssh"
-          ansible_user:       "${application.authentication.username}"
-%{~ endfor }
-
-    # Groups below are collections of the above groups for easier reference
+    # Groups below are collections of the above groups for easier refernce
     all_jumpboxes:
       children:
         jumpboxes_windows:
